--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                     //seçtiği dili kullanıcıya bildiriyorum.
 
-                    document.querySelector("#sonuc").textContent = kesilmisdil + " dili hakkında yarışıyorsunuz.";
+                    document.querySelector("#sonuc").textContent = kesilmisdil + " dili hakkındaki bilginizi kanıtlıyorsunuz.";
                 } else {
 
                     //eğer olandillersec arrayi girilen değeri içermiyorsa yazıyı kırmızı ve kalın yapıyorum.
@@ -248,7 +248,7 @@
                         "Java'da 'Garbage Collection' (Çöp Toplama) nedir ve nasıl çalışır?",
                         "Java'da 'Lambda Expressions' (Lambda İfadeleri) nasıl kullanılır?"
                     ];
-                    
+
                     var cevaplar = [
                         "System.out.println",
                         "Java, Nesne Yönelimli Programlama (OOP) prensiplerine dayalı, geniş bir kullanıma sahip, platform bağımsız bir programlama dilidir. Özellikle büyük ölçekli yazılım projelerinde, web uygulamalarında, oyun geliştirmede ve mobil uygulama geliştirmede sıklıkla kullanılır.",
