--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yazılım Bilgini Kanıtla</title>
+    <style>
+        p{
+            color: aliceblue;
+        }
+    </style>
 </head>
 <body style="background-color: rgb(10, 0, 25); margin: 0; height: 100dvh;">
     <main>
