--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(10, 0, 25); margin: 0; height: 100dvh;">
+<body style="background-color: rgb(10, 0, 25); margin: 0; height: 100svh;">
     <main>
         <div style="text-align: center;" id="ekran">
             <h1 style="color: aliceblue">Yazılım Bilgini Kanıtla</h1>
