--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         p{
             color: aliceblue;
         }
+        main div{
+            width: 70%;
+        }
     </style>
 </head>
 <body style="background-color: rgb(10, 0, 25); margin: 0;">
