--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yazılım Bilgini Kanıtla</title>
     <style>
+        body{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+        }
         p{
             color: aliceblue;
         }
